Estilos de Home y transaction

--- a/criptoWallet/src/app/components/home/home.component.html
+++ b/criptoWallet/src/app/components/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="login d-flex flex-column justify-content-start align-items-center">
+    <div class="d-flex flex-column justify-content-center align-items-center">
+      <img src="../../../assets/verify-identity.png" class="imgLogo" alt="Registration page logo">
+      <h2 class="p-3">Home Page</h2>
+    </div>
+    
+   
+</div>
+
