--- a/criptoWallet/src/app/components/transaction/transaction.component.html
+++ b/criptoWallet/src/app/components/transaction/transaction.component.html
@@ -1,1 +1,8 @@
-<p>transaction works!</p>
+<div class="login d-flex flex-column justify-content-start align-items-center">
+    <div class="d-flex flex-column justify-content-center align-items-center">
+      <img src="../../../assets/send-deposit.png" class="imgLogo" alt="Registration page logo">
+      <h2 class="p-3">Transaction History</h2>
+    </div>
+    
+   
+</div>
