Estilos de Home y transaction

--- a/criptoWallet/src/app/components/registration/registration.component.html
+++ b/criptoWallet/src/app/components/registration/registration.component.html
@@ -1,4 +1,4 @@
-<div class="login d-flex flex-column justify-content-center align-items-center">
+<div class="login container d-flex flex-column justify-content-start align-items-center">
     <div class="d-flex flex-column justify-content-center align-items-center">
       <img src="../../../assets/2page_sdsd.52a68d96.png" class="imgLogo" alt="Registration page logo">
       <h2 class="p-3">Registration Form</h2>
