--- a/criptoWallet/src/app/components/home/home.component.html
+++ b/criptoWallet/src/app/components/home/home.component.html
@@ -1,9 +1,27 @@
 <div class="login d-flex flex-column justify-content-start align-items-center">
-    <div class="d-flex flex-column justify-content-center align-items-center">
-      <img src="../../../assets/verify-identity.png" class="imgLogo" alt="Registration page logo">
-      <h2 class="p-3">Home Page</h2>
+  <div class="d-flex flex-column justify-content-center align-items-center">
+    <img src="../../../assets/verify-identity.png" class="imgLogo" alt="Registration page logo">
+    <h2 class="p-3">Home Page</h2>
+  </div>
+
+  <div class="card text-white bg-dark mb-3" style="max-width: 30rem;">
+    <div style="text-align:center;" class="card-header">Balance Total</div>
+    <div class="card-body">
+      <h2 style="text-align:center;" class="card-title">621.29</h2>
+      <p style="text-align:center;" class="card-text">ARS</p>
+
     </div>
-    
-   
+    <div class="card-header">
+      <div>
+        <button style="margin:2px 2px 2px 2px ;" type="button"  class="btn btn-primary">Depositar</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-primary">Enviar</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-primary">Compraventa</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-primary">Cambiar</button>
+      </div>
+    </div>
+  </div>
+
+
+
 </div>
 
