copyright in transaction history

--- a/criptoWallet/src/app/components/transaction/transaction.component.html
+++ b/criptoWallet/src/app/components/transaction/transaction.component.html
@@ -49,3 +49,9 @@
     </tbody>
   </table>
 </div>
+
+<div class="copyright py-4 text-center text-white">
+  <div class="container">
+    <small>Copyright 2022 &copy; Cripto-Wallet fsnet2-team2</small>
+  </div>
+</div>
