--- a/criptoWallet/src/app/components/home/home.component.html
+++ b/criptoWallet/src/app/components/home/home.component.html
@@ -4,24 +4,100 @@
     <h2 class="p-3">Home Page</h2>
   </div>
 
-  <div class="card text-white bg-dark mb-3" style="max-width: 30rem;">
-    <div style="text-align:center;" class="card-header">Balance Total</div>
+  <div class="card text-white bg-dark mb-4" style="max-width: 30rem;">
+    <div style="text-align:center;" class="card-header">Balance Total {{usuario}}</div>
     <div class="card-body">
-      <h2 style="text-align:center;" class="card-title">621.29</h2>
+      <h2 style="text-align:center;" class="card-title">${{saldo}}</h2>
       <p style="text-align:center;" class="card-text">ARS</p>
 
     </div>
     <div class="card-header">
-      <div>
-        <button style="margin:2px 2px 2px 2px ;" type="button"  class="btn btn-primary">Depositar</button>
-        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-primary">Enviar</button>
-        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-primary">Compraventa</button>
-        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-primary">Cambiar</button>
+      <div class="d-flex gap-2">
+        <button style="margin:2px 2px 2px 2px ;" type="button"  class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#depositar">Deposit</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#enviar">Send</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#comprar">Buy/Sell</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#cambiar">Change</button>
       </div>
     </div>
   </div>
 
+</div>
+
+<!-- Modal DEPOSITAR-->
+<div class="modal fade text-black" id="depositar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 " id="exampleModalLabel">Make a deposit</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal ENVIAR-->
+<div class="modal fade text-black" id="enviar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 " id="exampleModalLabel">Send Money</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
+<!-- Modal COMPRA/VENTA-->
+<div class="modal fade text-black" id="comprar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 " id="exampleModalLabel">Buy or Sell</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Modal CAMBIAR-->
+<div class="modal fade text-black" id="cambiar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 " id="exampleModalLabel">Change</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
 
