--- a/criptoWallet/src/app/components/registration/registration.component.html
+++ b/criptoWallet/src/app/components/registration/registration.component.html
@@ -4,22 +4,46 @@
       <h2 class="p-3">Registration Form</h2>
     </div>
     
-    <form class="row g-3" [formGroup]="regForm">
-        <div class="col-md-6">
-          <label for="inputEmail4" class="form-label">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="enter your email" formControlName="email">
-          <div *ngIf="regForm.get('email')?.invalid && (regForm.get('email')?.dirty || regForm.get('email')?.touched)" class="alerta">
-            <div *ngIf="regForm.get('email')?.errors?.['required']">
-              Email is required.
-            </div>
-            <div *ngIf="regForm.get('email')?.errors?.['email']">
-              You must enter a valid email format.
-            </div>
+    <form class="row g-3" [formGroup]="regForm" (submit)="registrarUsuario()">
+      <div class="col-md-6">
+        <label for="inputName" class="form-label">Name</label>
+        <input type="text" class="form-control" id="inputName" placeholder="enter your name" formControlName="name">
+        <div *ngIf="regForm.get('name')?.invalid && (regForm.get('name')?.dirty || regForm.get('name')?.touched)" class="alerta">
+          <div *ngIf="regForm.get('name')?.errors?.['required']">
+            This field is required.
+          </div>
+          <div *ngIf="regForm.get('name')?.errors?.['minlength']">
+            Must be at least 3 characters long.
           </div>
         </div>
+      </div>
+      <div class="col-md-6">
+        <label for="inputLastName" class="form-label">Last Name</label>
+        <input type="text" class="form-control" id="inputLastName" placeholder="enter your last name" formControlName="lastName">
+        <div *ngIf="regForm.get('lastName')?.invalid && (regForm.get('lastName')?.dirty || regForm.get('lastName')?.touched)" class="alerta">
+          <div *ngIf="regForm.get('lastName')?.errors?.['required']">
+            This field is required.
+          </div>
+          <div *ngIf="regForm.get('lastName')?.errors?.['minlength']">
+            Must be at least 3 characters long.
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <label for="inputEmail" class="form-label">Email</label>
+        <input type="email" class="form-control" id="inputEmail" placeholder="enter your email" formControlName="email">
+        <div *ngIf="regForm.get('email')?.invalid && (regForm.get('email')?.dirty || regForm.get('email')?.touched)" class="alerta">
+          <div *ngIf="regForm.get('email')?.errors?.['required']">
+            Email is required.
+          </div>
+          <div *ngIf="regForm.get('email')?.errors?.['email']">
+            You must enter a valid email format.
+          </div>
+        </div>
+      </div>
         <div class="col-md-6">
-          <label for="inputPassword4" class="form-label">Password: </label>
-          <input type="password" class="form-control" id="inputPassword4" placeholder="enter a password" formControlName="password">
+          <label for="inputPassword" class="form-label">Password: </label>
+          <input type="password" class="form-control" id="inputPassword" placeholder="enter a password" formControlName="password">
           <div *ngIf="regForm.get('password')?.invalid && (regForm.get('password')?.dirty || regForm.get('password')?.touched)" class="alerta">
             <div *ngIf="regForm.get('password')?.errors?.['required']">
               This field is required.
@@ -30,8 +54,8 @@
           </div>
         </div>
         <div class="col-md-6">
-          <label for="inputPassword4" class="form-label">Repeat password:</label>
-          <input type="password" class="form-control" id="inputPassword4" placeholder="repeat your password" formControlName="password2">
+          <label for="inputPassword2" class="form-label">Repeat password:</label>
+          <input type="password" class="form-control" id="inputPassword2" placeholder="repeat your password" formControlName="password2">
           <div *ngIf="regForm.get('password2')?.invalid && (regForm.get('password2')?.dirty || regForm.get('password2')?.touched)" class="alerta">
             <div *ngIf="regForm.get('password2')?.errors?.['required']">
               This field is required.
@@ -61,14 +85,14 @@
         </div>
         <div class="col-12">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck" formControlName="terms">
-            <label class="form-check-label" for="gridCheck">
-              Accept all terms and conditions
+            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required formControlName="terms">
+            <label class="form-check-label" for="invalidCheck2">
+              Agree to terms and conditions
             </label>
           </div>
         </div>
         <div class="col-12 d-flex gap-4 justify-content-center">
-          <button type="submit" class="btn btn-primary" [disabled]="regForm.invalid">Register me</button>
+          <button type="submit" class="btn btn-primary" [disabled]="regForm.invalid" >Register me</button>
           <a routerLink="/login" class="btn btn-outline-danger text-white">Go Back</a>
         </div>
       </form>
