--- a/criptoWallet/src/app/components/transaction/transaction.component.html
+++ b/criptoWallet/src/app/components/transaction/transaction.component.html
@@ -3,6 +3,35 @@
       <img src="../../../assets/send-deposit.png" class="imgLogo" alt="Registration page logo">
       <h2 class="p-3">Transaction History</h2>
     </div>
-    
+    <table class="table table-light" >
+      <thead>
+        <tr class="table-secondary">
+          <th scope="col">#</th>
+          <th scope="col">Transaction</th>
+          <th scope="col">Recipient</th>
+          <th scope="col">Account</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>1234567</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>154879</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry the Bird</td>
+          <td>@twitter</td>
+          <td>1654989</td>
+        </tr>
+      </tbody>
+    </table>
    
 </div>
