Se Agrega codigo en Rama correcta

--- a/criptoWallet/src/app/components/transaction/transaction.component.html
+++ b/criptoWallet/src/app/components/transaction/transaction.component.html
@@ -1,8 +1,69 @@
 <div class="login d-flex flex-column justify-content-start align-items-center">
+  <div class="d-flex flex-column justify-content-center align-items-center">
+    <img
+      src="../../../assets/send-deposit.png"
+      class="imgLogo"
+      alt="Registration page logo"
+    />
+    <h2 class="p-3">Transaction History</h2>
+  </div>
+  <div
+    class="login d-flex flex-column justify-content-start align-items-center"
+  >
     <div class="d-flex flex-column justify-content-center align-items-center">
-      <img src="../../../assets/send-deposit.png" class="imgLogo" alt="Registration page logo">
+      <img
+        src="../../../assets/send-deposit.png"
+        class="imgLogo"
+        alt="Registration page logo"
+      />
       <h2 class="p-3">Transaction History</h2>
     </div>
-    
-   
+    <table class="table table-bordered table-dark">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Date</th>
+          <th scope="col">Type Crypto</th>
+          <th scope="col">Send</th>
+          <th scope="col">Received</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>12-10-22</td>
+          <td>BTC</td>
+          <td>12.355</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>13-10-22</td>
+          <td>ETH</td>
+          <td>2.355</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>13-10-22</td>
+          <td>ETH</td>
+          <td>0</td>
+          <td>0.5500</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="copyright py-4 text-center text-white">
+    <div class="container">
+      <small>Copyright 2022 &copy; Cripto-Wallet fsnet2-team2</small>
+    </div>
+  </div>
 </div>
