--- a/criptoWallet/src/app/components/transaction/transaction.component.html
+++ b/criptoWallet/src/app/components/transaction/transaction.component.html
@@ -3,9 +3,9 @@
       <img src="../../../assets/send-deposit.png" class="imgLogo" alt="Registration page logo">
       <h2 class="p-3">Transaction History</h2>
     </div>
-    <table class="table table-light" >
+    <table class="table table-dark" >
       <thead>
-        <tr class="table-secondary">
+        <tr class="table-dark">
           <th scope="col">#</th>
           <th scope="col">Transaction</th>
           <th scope="col">Recipient</th>
