--- a/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
+++ b/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
@@ -13,6 +13,9 @@
             <a class="nav-link active" routerLink="/transactions">Transactions</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" routerLink="/quienes-somos">The Team</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" routerLink="/login">login</a>
           </li>
         </ul>
