--- a/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
+++ b/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
@@ -15,10 +15,10 @@
           <li class="nav-item">
             <a class="nav-link active" routerLink="/quienes-somos">The Team</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="/login">login</a>
-          </li>
         </ul>
-      </div>
+        <div>
+            <a class="btn btn-outline-primary " routerLink="/login">login</a>
+          </div>
+      </div>  
     </div>
 </nav>
