--- a/criptoWallet/src/app/components/transaction/transaction.component.html
+++ b/criptoWallet/src/app/components/transaction/transaction.component.html
@@ -10,26 +10,16 @@
           <th scope="col">Transaction</th>
           <th scope="col">Recipient</th>
           <th scope="col">Account</th>
+          <th scope="col">Amount</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
+      <tbody >
+        <tr *ngFor="let movimiento of movimientos">
           <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>1234567</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>154879</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry the Bird</td>
-          <td>@twitter</td>
-          <td>1654989</td>
+          <td>{{movimiento.tipoDeTransaccion}}</td>
+          <td>{{movimiento.receptorNombre}}</td>
+          <td>{{movimiento.cuentaReceptor}}</td>
+          <td>{{movimiento.monto | currency}}</td>
         </tr>
       </tbody>
     </table>
