--- a/criptoWallet/src/app/components/home/home.component.html
+++ b/criptoWallet/src/app/components/home/home.component.html
@@ -104,7 +104,7 @@
       </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="sendForm.reset()">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="sendForm.reset()" id="sendClose" >Close</button>
       </div>
     </div>
   </div>
