--- a/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
+++ b/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
@@ -17,7 +17,7 @@
           </li>
         </ul>
         <div>
-            <a class="btn btn-outline-primary " routerLink="/login">login</a>
+            <a class="btn btn-outline-danger " routerLink="/login" (click)="logout()">Logout</a>
           </div>
       </div>  
     </div>
