--- a/criptoWallet/src/app/components/quienes-somos/quienes-somos.component.html
+++ b/criptoWallet/src/app/components/quienes-somos/quienes-somos.component.html
@@ -7,7 +7,7 @@
       <div *ngFor="let item of team" class="col-md-3 text-center">
         <div>
           <img class="rounded-circle img-fluid" [src]="item.imagen" alt="..." />
-          <h4>{{ item.name }}</h4>
+          <h4>{{ item.name | uppercase }}</h4>
           <a class="btn mx-3" href="#!"><i class="fab fa-linkedin-in"></i></a>
           <a class="btn" routerLink="/quienes-somos/3">Ver Perfil</a>
         </div>
