--- a/criptoWallet/src/app/components/login/login.component.html
+++ b/criptoWallet/src/app/components/login/login.component.html
@@ -8,15 +8,26 @@
           <div class="col-md-12">
             <label for="email" class="form-label" >Email</label>
             <input type="email" class="form-control" id="email" formControlName="email">
-            <p class="alerta" *ngIf="loginForm.touched && loginForm.get('email')?.errors?.['email']" >You must enter a correct email</p>
+            <div *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)" class="alerta">
+              <div *ngIf="loginForm.get('email')?.errors?.['required']">
+                Email is required.
+              </div>
+              <div *ngIf="loginForm.get('email')?.errors?.['email']">
+                You must enter a valid email format.
+              </div>
+            </div>
           </div>
           <div class="col-md-12">
             <label for="password" class="form-label"  >Password</label>
             <input type="password" class="form-control" id="password" formControlName="password">
-            <p class="alerta" *ngIf="loginForm.touched && loginForm.get('password')?.errors?.['required']" >You must enter a password</p>
+            <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)" class="alerta">
+              <div *ngIf="loginForm.get('password')?.errors?.['required']">
+                Password is required.
+              </div>
+            </div>
           </div>
           <div class="col-12 d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-primary text-white" [disabled]="loginForm.invalid"><a class="text-white" routerLink="/home">Login</a></button>
+            <button type="submit" class="btn btn-outline-primary text-white" [disabled]="loginForm.invalid"><a class="text-white">Login</a></button>
           </div>
           <div class="col-12 d-flex justify-content-center">
               <p>Aren't you register? <a routerLink="/registration">click here</a> </p>
