--- a/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
+++ b/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
@@ -12,11 +12,13 @@
           <li class="nav-item">
             <a class="nav-link active" routerLink="/transactions">Transactions</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="/quienes-somos">The Team</a>
+          </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary" type="submit">Search</button>
-        </form>
-      </div>
+        <div>
+            <a class="btn btn-outline-danger " routerLink="/login" *ngIf="token!=null" (click)="logout()">Logout</a>
+          </div>
+      </div>  
     </div>
 </nav>
