--- a/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
+++ b/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" >Cripto-Wallet  </a>
+      <a class="navbar-brand" >Cripto-Wallet  <img src="https://img.freepik.com/vector-premium/pixel-art-bitcoin-wallet-inversion-icono-criptomonedas-juego-8-bits-sobre-fondo-blanco_360488-221.jpg?" w=740 alt="" width="30" height="24" class="d-inline-block align-text-top">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
