--- a/criptoWallet/src/app/components/home/home.component.html
+++ b/criptoWallet/src/app/components/home/home.component.html
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="col-md-12">
-            <label for="cuenta" class="form-label"  >Account number:</label>
+            <label for="cuenta" class="form-label"  >From Account number:</label>
             <input type="text" class="form-control" id="cuenta" formControlName="cuenta">
             <div *ngIf="sendForm.get('cuenta')?.invalid && (sendForm.get('cuenta')?.dirty || sendForm.get('cuenta')?.touched)" class="alerta">
               <div *ngIf="sendForm.get('cuenta')?.errors?.['required']">
