--- a/criptoWallet/src/app/components/home/home.component.html
+++ b/criptoWallet/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
   <div class="card text-white bg-dark mb-4" style="max-width: 30rem;">
     <div style="text-align:center;" class="card-header">Balance Total {{usuario}}</div>
     <div class="card-body">
-      <h2 style="text-align:center;" class="card-title">${{cuenta.monto}}</h2>
+      <h2 style="text-align:center;" class="card-title">${{cuentaActiva.monto}}</h2>
       <p style="text-align:center;" class="card-text">ARS</p>
 
     </div>
