--- a/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
+++ b/criptoWallet/src/app/components/nav-bar/nav-bar.component.html
@@ -18,7 +18,7 @@
           </li>
         </ul>
         <div>
-            <a class="btn btn-outline-danger " routerLink="/login" *ngIf="token!=null" (click)="logout()">Logout</a>
+            <a class="btn btn-outline-danger " routerLink="/login" (click)="logout()">Logout</a>
           </div>
       </div>  
     </div>
