--- a/criptoWallet/src/app/components/home/home.component.html
+++ b/criptoWallet/src/app/components/home/home.component.html
@@ -34,22 +34,22 @@
       <div class="modal-body text-bg-secondary d-flex justify-content-center align-items-center">
         <form [formGroup]="depositForm" (ngSubmit)="depositar()" class="col-7 d-flex flex-column gap-5">
           <div class="col-md-12">
-            <label for="monto" class="form-label" >How much?</label>
-            <input type="number" class="form-control" id="monto" formControlName="monto">
-            <div *ngIf="depositForm.get('monto')?.invalid && (depositForm.get('monto')?.dirty || depositForm.get('monto')?.touched)" class="alerta">
-              <div *ngIf="depositForm.get('monto')?.errors?.['required']">
+            <label for="montoDeposito" class="form-label" >How much?</label>
+            <input type="number" class="form-control" id="montoDeposito" formControlName="montoDeposito">
+            <div *ngIf="depositForm.get('montoDeposito')?.invalid && (depositForm.get('montoDeposito')?.dirty || depositForm.get('montoDeposito')?.touched)" class="alerta">
+              <div *ngIf="depositForm.get('montoDeposito')?.errors?.['required']">
                 Amout is required.
               </div>
             </div>
           </div>
           <div class="col-md-12">
-            <label for="cuenta" class="form-label"  >Account number:</label>
-            <input type="text" class="form-control" id="cuenta" formControlName="cuenta">
-            <div *ngIf="depositForm.get('cuenta')?.invalid && (depositForm.get('cuenta')?.dirty || depositForm.get('cuenta')?.touched)" class="alerta">
-              <div *ngIf="depositForm.get('cuenta')?.errors?.['required']">
+            <label for="cuentaDeposito" class="form-label"  >Account number:</label>
+            <input type="text" class="form-control" id="cuentaDeposito" formControlName="cuentaDeposito">
+            <div *ngIf="depositForm.get('cuentaDeposito')?.invalid && (depositForm.get('cuentaDeposito')?.dirty || depositForm.get('cuentaDeposito')?.touched)" class="alerta">
+              <div *ngIf="depositForm.get('cuentaDeposito')?.errors?.['required']">
                 Account is required.
               </div>
-              <div *ngIf="depositForm.get('cuenta')?.errors?.['minlength']">
+              <div *ngIf="depositForm.get('cuentaDeposito')?.errors?.['minlength']">
                 Account must have at least 9 characters.
               </div>
             </div>
@@ -78,34 +78,34 @@
       <div class="modal-body text-bg-secondary d-flex justify-content-center align-items-center">
         <form [formGroup]="sendForm" (ngSubmit)="enviarDinero()" class="col-7 d-flex flex-column gap-5">
           <div class="col-md-12">
-            <label for="monto" class="form-label" >How much?</label>
-            <input type="number" class="form-control" id="monto" formControlName="monto">
-            <div *ngIf="sendForm.get('monto')?.invalid && (sendForm.get('monto')?.dirty || sendForm.get('monto')?.touched)" class="alerta">
-              <div *ngIf="sendForm.get('monto')?.errors?.['required']">
+            <label for="montoEnvio" class="form-label" >How much?</label>
+            <input type="number" class="form-control" id="montoEnvio" formControlName="montoEnvio">
+            <div *ngIf="sendForm.get('montoEnvio')?.invalid && (sendForm.get('montoEnvio')?.dirty || sendForm.get('montoEnvio')?.touched)" class="alerta">
+              <div *ngIf="sendForm.get('montoEnvio')?.errors?.['required']">
                 Amout is required.
               </div>
             </div>
           </div>
           <div class="col-md-12">
-            <label for="cuenta" class="form-label"  >From Account number:</label>
-            <input type="text" class="form-control" id="cuenta" formControlName="cuenta">
-            <div *ngIf="sendForm.get('cuenta')?.invalid && (sendForm.get('cuenta')?.dirty || sendForm.get('cuenta')?.touched)" class="alerta">
-              <div *ngIf="sendForm.get('cuenta')?.errors?.['required']">
+            <label for="cuentaEnvio" class="form-label"  >From Account number:</label>
+            <input type="text" class="form-control" id="cuentaEnvio" formControlName="cuentaEnvio">
+            <div *ngIf="sendForm.get('cuentaEnvio')?.invalid && (sendForm.get('cuentaEnvio')?.dirty || sendForm.get('cuentaEnvio')?.touched)" class="alerta">
+              <div *ngIf="sendForm.get('cuentaEnvio')?.errors?.['required']">
                 Account is required.
               </div>
-              <div *ngIf="sendForm.get('cuenta')?.errors?.['minlength']">
+              <div *ngIf="sendForm.get('cuentaEnvio')?.errors?.['minlength']">
                 Account must have at least 9 characters.
               </div>
             </div>
           </div>
           <div class="col-md-12">
-            <label for="cuenta" class="form-label"  >To account:</label>
-            <input type="text" class="form-control" id="cuenta" formControlName="cuenta">
-            <div *ngIf="sendForm.get('cuenta')?.invalid && (sendForm.get('cuenta')?.dirty || sendForm.get('cuenta')?.touched)" class="alerta">
-              <div *ngIf="sendForm.get('cuenta')?.errors?.['required']">
+            <label for="cuentaReceptor" class="form-label"  >To account:</label>
+            <input type="text" class="form-control" id="cuentaReceptor" formControlName="cuentaReceptor">
+            <div *ngIf="sendForm.get('cuentaReceptor')?.invalid && (sendForm.get('cuentaReceptor')?.dirty || sendForm.get('cuentaReceptor')?.touched)" class="alerta">
+              <div *ngIf="sendForm.get('cuentaReceptor')?.errors?.['required']">
                 Account is required.
               </div>
-              <div *ngIf="sendForm.get('cuenta')?.errors?.['minlength']">
+              <div *ngIf="sendForm.get('cuentaReceptor')?.errors?.['minlength']">
                 Account must have at least 9 characters.
               </div>
             </div>
