--- a/criptoWallet/src/app/components/home/home.component.html
+++ b/criptoWallet/src/app/components/home/home.component.html
@@ -4,19 +4,19 @@
     <h2 class="p-3">Home Page</h2>
   </div>
 
-  <div class="card text-white bg-dark mb-4" style="max-width: 30rem;">
-    <div style="text-align:center;" class="card-header">Balance Total {{usuario}}</div>
-    <div class="card-body">
-      <h2 style="text-align:center;" class="card-title">${{cuentaActiva.monto}}</h2>
+  <div class="card text-white bg-dark mb-4" style="width: 30rem; height: 20rem;">
+    <div style="text-align:center;" class="card-header">Balance Total {{usuario.nombre}}</div>
+    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+      <h2 style="text-align:center;" class="card-title">{{cuentaActiva.monto | currency}}</h2>
       <p style="text-align:center;" class="card-text">ARS</p>
 
     </div>
     <div class="card-header">
-      <div class="d-flex gap-2">
-        <button style="margin:2px 2px 2px 2px ;" type="button"  class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#depositar">Deposit</button>
-        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#enviar">Send</button>
-        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#comprar">Buy/Sell</button>
-        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#cambiar">Change</button>
+      <div class="d-flex justify-content-center align-items-center gap-2">
+        <button style="margin:2px 2px 2px 2px ;" type="button"  class="btn btn-outline-primary text-white" data-bs-toggle="modal" data-bs-target="#depositar">Deposit</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-primary text-white" data-bs-toggle="modal" data-bs-target="#enviar">Send</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-info text-white" data-bs-toggle="modal" data-bs-target="#comprar">Create</button>
+        <button style="margin:2px 2px 2px 2px ;" type="button" class="btn btn-outline-info text-white" data-bs-toggle="modal" data-bs-target="#cambiar">Change</button>
       </div>
     </div>
   </div>
@@ -123,20 +123,44 @@
 </div>
 
 
-<!-- Modal COMPRA/VENTA-->
+<!-- Modal CREAR CUENTA-->
 <div class="modal fade text-black" id="comprar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5 " id="exampleModalLabel">Buy or Sell</h1>
+        <h1 class="modal-title fs-5 " id="exampleModalLabel">Create Account</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-bg-secondary d-flex justify-content-center align-items-center">
-        IN CONTRUCTION
+        <form [formGroup]="createForm" (ngSubmit)="createAccount()" class="col-7 d-flex flex-column gap-5">
+          <div class="col-md-12">
+            <label for="dni" class="form-label" >DNI:</label>
+            <input type="number" class="form-control" id="dni" formControlName="dni">
+            <div *ngIf="createForm.get('dni')?.invalid && (createForm.get('dni')?.dirty || createForm.get('dni')?.touched)" class="alerta">
+              <div *ngIf="createForm.get('dni')?.errors?.['required']">
+                DNI is required.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <label for="alias" class="form-label"  >Alias:</label>
+            <input type="text" class="form-control" id="cuentaDeposito" formControlName="alias">
+            <div *ngIf="createForm.get('alias')?.invalid && (createForm.get('alias')?.dirty || createForm.get('alias')?.touched)" class="alerta">
+              <div *ngIf="createForm.get('alias')?.errors?.['required']">
+                Alias is required.
+              </div>
+              <div *ngIf="createForm.get('alias')?.errors?.['minlength']">
+                Alias must have at least 9 characters.
+              </div>
+            </div>
+          </div>
+          <div class="col-12 d-flex justify-content-center">
+            <button type="submit" class="btn btn-outline-primary text-white" [disabled]="createForm.invalid"><a class="text-white">Create new account</a></button>
+          </div>
+      </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="sendForm.reset()" id="createClose" >Close</button>
       </div>
     </div>
   </div>
@@ -148,15 +172,29 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5 " id="exampleModalLabel">Change</h1>
+        <h1 class="modal-title fs-5 " id="exampleModalLabel">Change Account</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-bg-secondary d-flex justify-content-center align-items-center">
-        IN CONTRUCTION
+        <form [formGroup]="changeForm" (ngSubmit)="createAccount()" class="col-7 d-flex flex-column gap-5">
+          <div class="col-md-12">
+            <label for="acountNumber" class="form-label" >Choose one account:</label>
+            <select type="number" class="form-control" id="acountNumber" formControlName="acountNumber">
+              <option value="">Cuenta 1</option>
+            </select>
+            <div *ngIf="changeForm.get('acountNumber')?.invalid" class="alerta">
+              <div *ngIf="changeForm.get('acountNumber')?.errors?.['required']">
+                Must select an account.
+              </div>
+            </div>
+          </div>
+          <div class="col-12 d-flex justify-content-center">
+            <button type="submit" class="btn btn-outline-primary text-white" [disabled]="changeForm.invalid"><a class="text-white">Create new account</a></button>
+          </div>
+      </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
